refactor: adiciona melhorias para integração